--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,7 @@
 /* Import other style files */
 @import "./css/colors.css";
 
-/* Dialog styling for SignInForm component
+/* Dialog styling for SignInForm component */
 .SignInDialog {
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
   border-radius: 0.75rem;
